[gd_scene load_steps=9 format=3 uid="uid://cr0kt82t5syeb"]

[ext_resource type="AudioStream" uid="uid://c55ssmmlfp47y" path="res://Audio/Music/HeavyChip.mp3" id="1_tshaf"]
[ext_resource type="Script" path="res://Scenes/radio.gd" id="1_ucubv"]
[ext_resource type="Resource" uid="uid://p1hixpp3ql2a" path="res://Resources/commercials.tres" id="3_63j5x"]
[ext_resource type="AudioStream" uid="uid://77aigxwpxxa0" path="res://Audio/Music/HeavyRock.mp3" id="4_2l2oc"]
[ext_resource type="AudioStream" uid="uid://b0yffgmudxnkn" path="res://Audio/Music/HeavyClassic.mp3" id="5_rtdbu"]
[ext_resource type="Script" path="res://Scenes/radio_station.gd" id="6_dm1kc"]
[ext_resource type="AudioStream" uid="uid://c8i761ndmru8x" path="res://Audio/Music/HeavyTech.mp3" id="6_m0ov1"]
[ext_resource type="AudioStream" uid="uid://dwe5oee14ntft" path="res://Audio/radio_static.mp3" id="8_2ir33"]

[node name="Radio" type="Node"]
process_mode = 3
script = ExtResource("1_ucubv")

[node name="RockStation" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2l2oc")
volume_db = -80.0
bus = &"Music"
script = ExtResource("6_dm1kc")
song = ExtResource("4_2l2oc")
commercials = ExtResource("3_63j5x")

[node name="ChipStation" type="AudioStreamPlayer" parent="."]
volume_db = -80.0
bus = &"Music"
script = ExtResource("6_dm1kc")
song = ExtResource("1_tshaf")
commercials = ExtResource("3_63j5x")

[node name="ClassicStation" type="AudioStreamPlayer" parent="."]
volume_db = -80.0
bus = &"Music"
script = ExtResource("6_dm1kc")
song = ExtResource("5_rtdbu")
commercials = ExtResource("3_63j5x")

[node name="TechStation" type="AudioStreamPlayer" parent="."]
volume_db = -80.0
bus = &"Music"
script = ExtResource("6_dm1kc")
song = ExtResource("6_m0ov1")
commercials = ExtResource("3_63j5x")

[node name="StaticPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_2ir33")
bus = &"Music"
